--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -1,11 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Seq",
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://seq:5341"
+        }
+      },
+      {
+        "Name": "Console"
+      }
+    ]
+  },
   "Jwt": {
     "Issuer" : ".survivethething.com",
     "Audience" : ".survivethething.com"
