--- a/App/appsettings.Development.json
+++ b/App/appsettings.Development.json
@@ -1,9 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Seq",
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://192.168.1.106:5341"
+        }
+      },
+      {
+        "Name": "Console"
+      }
+    ]
   },
   "Jwt": {
     "Issuer" : "localhost",
