--- a/App/appsettings.Development.json
+++ b/App/appsettings.Development.json
@@ -23,6 +23,9 @@
       }
     ]
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=devdb;Username=postgres;Password=developer-password;"
+  },
   "Jwt": {
     "Issuer" : "localhost",
     "Audience" : "localhost",
