--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -25,7 +25,7 @@
     ]
   },
   "Jwt": {
-    "Issuer" : ".survivethething.com",
-    "Audience" : ".survivethething.com"
+    "Issuer" : "*.survivethething.com",
+    "Audience" : "*.survivethething.com"
   }
 }
