--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,5 +23,8 @@
     "typescript": "^5.6.2",
     "uuid": "^10.0.0",
     "vite": "^5.4.8"
+  },
+  "dependencies": {
+    "@microsoft/signalr": "^8.0.7"
   }
 }
