--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -28,5 +28,8 @@
       }
     ],
     "Enrich": ["FromLogContext"]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=devdb;Username=postgres;Password=developer-password;"
   }
 }
