--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -9,5 +9,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Discord.Net.WebSocket" Version="3.18.0" />
+  </ItemGroup>
 
 </Project>
